--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^1.12.1",
     "react-testing-library": "^5.4.4"
   },
+  "homepage": "/sales-history/",
   "browserslist": [
     ">0.2%",
     "not dead",
