--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+*/node_modules
 
 # testing
 /coverage
@@ -15,5 +16,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.serverless
+*/.serverless
 
 /playground
