--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "serverless-http": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +23,8 @@
     "test:front": "react-scripts test",
     "test:server": "jest ./server/*",
     "eject": "react-scripts eject",
-    "start:server": "nodemon server/index.js"
+    "start:server": "nodemon server/index.js",
+    "lambda:deploy": "bash ./my-scripts/lambda-deploy.sh"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
@@ -36,7 +38,8 @@
     "jest": "^23.6.0",
     "jest-dom": "^3.0.0",
     "nodemon": "^1.12.1",
-    "react-testing-library": "^5.4.4"
+    "react-testing-library": "^5.4.4",
+    "serverless": "^1.36.1"
   },
   "homepage": "/sales-history/",
   "browserslist": [
