--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.5.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.16.0",
     "istanbul": "^0.4.5",
     "jest": "^24.9.0",
     "nodemon": "^1.12.1",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.7.0",
     "serverless": "^1.36.1"
   },
