--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -2,7 +2,7 @@ service: sales-history
 
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs12.x
   stage: dev
   region: eu-central-1
 
